--- a/UnitTests/Dx9WorldUnitTest/Dx9WorldUnitTest.vcproj
+++ b/UnitTests/Dx9WorldUnitTest/Dx9WorldUnitTest.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(CPPGURU_SDK)\include\&quot;;../../Dx9World/Dx9World/"
+				AdditionalIncludeDirectories="&quot;$(CPPGURU_SDK)\include\&quot;;../../Dx9World/Dx9World/;&quot;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -61,9 +61,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gtestd.lib"
+				AdditionalDependencies="gtestd.lib  d3d9.lib d3dx9.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(CPPGURU_SDK)\lib\GTest\Debug"
+				AdditionalLibraryDirectories="&quot;$(CPPGURU_SDK)\lib\GTest\Debug&quot;;&quot;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -117,7 +117,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(CPPGURU_SDK)\include\&quot;;../../Dx9World/Dx9World/"
+				AdditionalIncludeDirectories="&quot;$(CPPGURU_SDK)\include\&quot;;../../Dx9World/Dx9World/;&quot;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -136,9 +136,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gtest.lib"
+				AdditionalDependencies="gtest.lib d3d9.lib d3dx9.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(CPPGURU_SDK)\lib\GTest\Release"
+				AdditionalLibraryDirectories="&quot;$(CPPGURU_SDK)\lib\GTest\Release&quot;;&quot;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
